# ibm-cos-sdk-python

./: .coveragerc  .gitignore  .metadata  .secrets.baseline  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  tox.ini
_modules/: boto3.html  ibm_boto3.html  index.html
_modules/boto3/: session.html
_modules/ibm_boto3/: session.html
_sources/: index.rst.txt  index.txt
_static/: documentation_options.js
boto3/: __init__.py  exceptions.py  session.py
boto3/docs/: action.py
boto3/resources/: action.py  collection.py  factory.py  model.py
boto3/s3/: inject.py
docs/source/: conf.py  index.rst
ibm_boto3/: __init__.py  compat.py  exceptions.py  session.py  utils.py
ibm_boto3/docs/: __init__.py  action.py  attr.py  base.py  client.py  collection.py  docstring.py  method.py  resource.py  service.py  subresource.py  utils.py  waiter.py
ibm_boto3/resources/: action.py  base.py  collection.py  factory.py  model.py  params.py  response.py
ibm_boto3/s3/: inject.py  transfer.py
reference/core/: boto3.html  collections.html  ibm_boto3.html  index.html  resources.html  session.html
reference/customizations/: index.html  s3.html
reference/services/: index.html  s3.html
scripts/: new-change
scripts/ci/: run-tests
tests/: __init__.py
tests/functional/: test_collection.py  test_resource.py  test_s3.py  test_session.py  test_smoke.py  test_utils.py
(+850 files in other folders)
