[bdist_wheel]
universal = 0

[metadata]
requires_dist =
    ibm-cos-sdk-core==2.15.0
    ibm-cos-sdk-s3transfer==2.15.0
    jmespath>=0.10.0,<=1.0.1
[options.extras_require]
crt = ibm_botocore[crt]>=1.21.0,<2.0a0

[flake8]
ignore = E203,E501,W503,W504
exclude =
    docs,
    ibm_boto3/compat.py,
    ibm_boto3/data,
    .changes